manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-startproject
  namespace: django-startproject
  labels:
    app: django-startproject
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
      # annotations:
      #   # sidecar.istio.io/rewriteAppHTTPProbers: "false"
      #   traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                - spark-operator
            topologyKey: kubernetes.io/hostname
      containers:
      - name: django
        image: ghcr.io/abin-tiger/django-startproject:main
        # livenessProbe:
        #   httpGet:
        #     # path: /
        #     port: 8000
        # readinessProbe:
        #   tcpSocket:
        #     port: 8000
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-startproject
  namespace: django-startproject
  labels:
    app: django
    service: django
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: django
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: django
  namespace: django-startproject
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/default-gateway
  http:
  - route:
    - destination:
        host: django-startproject
        port:
          number: 8000
